# internal/server/device/delivery/http/handler.go
@@ -1,27 +1,22 @@
 package http
 
 import (
-	"net/http"
-
 	"github.com/OkciD/whos_on_call/internal/server/device"
-	"github.com/OkciD/whos_on_call/internal/server/pkg/http/handler"
 	"github.com/OkciD/whos_on_call/internal/shared/pkg/logger"
 )
 
-type UserHandler struct {
+type Handler struct {
 	logger logger.Logger
 
 	deviceUseCase device.UseCase
 }
 
-func New(mux *http.ServeMux, logger logger.Logger, deviceUseCase device.UseCase) *UserHandler {
-	h := &UserHandler{
+func New(logger logger.Logger, deviceUseCase device.UseCase) *Handler {
+	h := &Handler{
 		logger: logger,
 
 		deviceUseCase: deviceUseCase,
 	}
-
-	mux.Handle("POST /api/v1/device", handler.GenericHandler(logger, h.CreateDevice))
 
 	return h
 }
