# internal/server/user/delivery/http/handler.go
@@ -1,27 +1,22 @@
 package http
 
 import (
-	"net/http"
-
-	"github.com/OkciD/whos_on_call/internal/server/pkg/http/handler"
 	"github.com/OkciD/whos_on_call/internal/server/user"
 	"github.com/OkciD/whos_on_call/internal/shared/pkg/logger"
 )
 
-type UserHandler struct {
+type Handler struct {
 	logger logger.Logger
 
 	userUseCase user.UseCase
 }
 
-func New(mux *http.ServeMux, logger logger.Logger, userUseCase user.UseCase) *UserHandler {
-	h := &UserHandler{
+func New(logger logger.Logger, userUseCase user.UseCase) *Handler {
+	h := &Handler{
 		logger: logger,
 
 		userUseCase: userUseCase,
 	}
-
-	mux.Handle("GET /api/v1/user", handler.GenericHandler(logger, h.GetUser))
 
 	return h
 }
